--- a/index.html
+++ b/index.html
@@ -3994,8 +3994,8 @@ pintrk('track', 'pagevisit');
                     <figure class="elementor-image-box-img"><img decoding="async" width="1440" height="1920"
                         src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%201440%201920'%3E%3C/svg%3E"
                         class="attachment-full size-full wp-image-7184" alt=""
-                        data-lazy-src="./gif/Dashboard.gif" /><noscript><img decoding="async" width="1440" height="1920"
-                          src="./gif/Dashboard.gif" class="attachment-full size-full wp-image-7184" alt="" /></noscript>
+                        data-lazy-src="./gif/Dash.gif" /><noscript><img decoding="async" width="1440" height="1920"
+                          src="./gif/Dash.gif" class="attachment-full size-full wp-image-7184" alt="" /></noscript>
                     </figure>
                     <div class="elementor-image-box-content">
                       <h3 class="elementor-image-box-title">Dashboard</h3>
@@ -4028,8 +4028,9 @@ pintrk('track', 'pagevisit');
                     <figure class="elementor-image-box-img"><img decoding="async" width="1440" height="1920"
                         src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%201440%201920'%3E%3C/svg%3E"
                         class="attachment-full size-full wp-image-7190" alt=""
-                        data-lazy-src="./gif/Rotina.gif" /><noscript><img decoding="async" width="1440" height="1920"
-                          src="./gif/Rotina.gif" class="attachment-full size-full wp-image-7190" alt="" /></noscript>
+                        data-lazy-src="./gif/asdsdasdRotina.gif" /><noscript><img decoding="async" width="1440"
+                          height="1920" src="./gif/asdsdasdRotina.gif" class="attachment-full size-full wp-image-7190"
+                          alt="" /></noscript>
                     </figure>
                     <div class="elementor-image-box-content">
                       <h3 class="elementor-image-box-title">Minha rotina</h3>
