feat: pixel facebook add

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -4737,7 +4737,7 @@ pintrk('track', 'pagevisit');
                                 <path id="Vector" d="M1 1L7 7L1 13" stroke="white" stroke-width="1.8"
                                   stroke-linecap="round" stroke-linejoin="round"></path>
                               </svg> </span>
-                            <span class="elementor-button-text">Adquira agora</span>
+                            <span class="elementor-button-text">Comprar agora</span>
                           </span>
                         </a>
                       </div>
